set copyright year

--- a/src/librarySystemcodes/LibraryHome.form
+++ b/src/librarySystemcodes/LibraryHome.form
@@ -592,7 +592,11 @@
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Component id="labelPermission" max="32767" attributes="0"/>
                                       </Group>
-                                      <Component id="jLabel79" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <Component id="jLabel79" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace max="-2" attributes="0"/>
+                                          <Component id="labelYear" min="-2" max="-2" attributes="0"/>
+                                      </Group>
                                       <Component id="jSeparator1" max="32767" attributes="0"/>
                                       <Component id="jPanel39" alignment="0" max="32767" attributes="0"/>
                                   </Group>
@@ -625,7 +629,10 @@
                                   <EmptySpace min="-2" max="-2" attributes="0"/>
                                   <Component id="jSeparator1" min="-2" pref="7" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" max="-2" attributes="0"/>
-                                  <Component id="jLabel79" min="-2" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="3" attributes="0">
+                                      <Component id="jLabel79" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="labelYear" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  </Group>
                                   <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
                               </Group>
                               <Component id="jPanel10" max="32767" attributes="0"/>
@@ -1300,7 +1307,8 @@
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel79">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="System version 2.2.0 &#xa9; 2018 "/>
+                    <Property name="horizontalAlignment" type="int" value="4"/>
+                    <Property name="text" type="java.lang.String" value="System version 2.2.0 &#xa9; "/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JSeparator" name="jSeparator1">
@@ -1513,6 +1521,11 @@
                     </Container>
                   </SubComponents>
                 </Container>
+                <Component class="javax.swing.JLabel" name="labelYear">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="year"/>
+                  </Properties>
+                </Component>
               </SubComponents>
             </Container>
             <Component class="javax.swing.JLabel" name="lblUserId">
