--- a/src/librarySystemcodes/DialogEditStaffList.form
+++ b/src/librarySystemcodes/DialogEditStaffList.form
@@ -223,6 +223,9 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="comboUpdate">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="2">
                 <StringItem index="0" value="Active"/>
